--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "discord.js": "^14.18.0",
     "http-graceful-shutdown": "^3.1.14",
     "pino": "^9.6.0",
