--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.9",
     "discord.js": "^14.18.0",
     "http-graceful-shutdown": "^3.1.14",
+    "node-cache": "^5.1.2",
     "pino": "^9.6.0",
     "tiny-invariant": "^1.3.3",
     "zod": "^3.24.2"
