--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-    "*.{ts}": ["eslint --fix", "prettier --write"],
+    "*.ts": ["eslint --fix", "prettier --write"],
     "*.{json,md,yml,yaml,css,html,js,cjs,mjs}": ["prettier --write"]
 }
